updated with separate schema markup within each file

--- a/thermostat.html
+++ b/thermostat.html
@@ -93,8 +93,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     			"query-input": "required name=search_term_string"
     		}
     	}
-    },
-{
+    }]
+</script>
+<script type="application/ld+json">
+[{
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
       "itemListElement": [
@@ -127,8 +129,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 5,
         "name": "Blinds",
         "item": "https://house-mate.com.au/blinds.html"
-      },
-{
+      }]
+}]
+</script>
+<script type="application/ld+json">
+[{
       "@context": "https://schema.org",
       "@type": "VideoObject",
       "name": "Thermostat Automation | Smart Thermostats",
