--- a/irrigation.html
+++ b/irrigation.html
@@ -95,8 +95,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     			"query-input": "required name=search_term_string"
     		}
     	}
-    },
-{
+    }]
+</script>
+<script type="application/ld+json">
+[{
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
       "itemListElement": [
@@ -130,8 +132,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 5,
         "name": "Thermostat",
         "item": "https://house-mate.com.au/thermostat.html"
-      },
-{
+      }
+]
+}
+]
+</script>
+<script type="application/ld+json">
+[{
       "@context": "https://schema.org",
       "@type": "VideoObject",
       "name": "Irrigation Automation | Smart Irrigation",
