--- a/lighting.html
+++ b/lighting.html
@@ -95,8 +95,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     			"query-input": "required name=search_term_string"
     		}
     	}
-    },
-{
+    }]
+</script>
+<script type="application/ld+json">
+[{
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
       "itemListElement": [{
@@ -134,8 +136,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 6,
         "name": "Thermostat",
         "item": "https://house-mate.com.au/thermostat.html"
-      },
-{
+      }]
+}]
+</script>
+<script type="application/ld+json">
+[{
       "@context": "https://schema.org",
       "@type": "VideoObject",
       "name": "Lighting Automation | Smart Lighting",
