--- a/remote.html
+++ b/remote.html
@@ -93,7 +93,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     			"query-input": "required name=search_term_string"
     		}
     	}
-    },
+    }]
+</script>
+<script type="application/ld+json">
+[
 {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
@@ -132,8 +135,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 6,
         "name": "Thermostat",
         "item": "https://house-mate.com.au/thermostat.html"
-      },
-{
+      }
+]
+}
+]
+</script>
+<script type="application/ld+json">
+[{
       "@context": "https://schema.org",
       "@type": "VideoObject",
       "name": "Remote Control Automation | Smart Remote Control Homekit",
