--- a/lighting.html
+++ b/lighting.html
@@ -144,7 +144,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@context": "https://schema.org",
       "@type": "VideoObject",
       "name": "Lighting Automation | Smart Lighting",
-      "description": "Experience the future of lighting with our Smart Lighting Installer service. Whether you're looking to enhance the ambiance of your home, improve your workplace environment, or reduce energy consumption, we have the expertise and technology to make it happen. Make your space smarter, more efficient, and visually stunning with our professional smart lighting installation.",
+      "description": "Experience the future of lighting with our Smart Lighting Installer service. Whether you are looking to enhance the ambiance of your home, improve your workplace environment, or reduce energy consumption, we have the expertise and technology to make it happen. Make your space smarter, more efficient, and visually stunning with our professional smart lighting installation.",
       "thumbnailUrl": [
         "https://house-mate.com.au/assets/images/lighting-control-homekit-220x220.png"
     
