--- a/pool.html
+++ b/pool.html
@@ -66,6 +66,78 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   
 </head>
+
+
+<script type="application/ld+json">
+   [ {
+    	"@context": "https://schema.org",
+    	"@type": "Webpage",
+    	"@id": "https://house-mate.com.au/pool.html#webpage",
+    	"url": "https://house-mate.com.au/pool.html",
+    	"name": "House-Mate | Pool & Spa Automation | Smart Pool | Smart Spa",
+    	"description": "Control pumps and pool or spa temperature from anywhere for optimal convenience, efficiency, and peace of mind.",
+    	"isPartOf": {
+    		"@type": "WebSite",
+    		"@id": "https://house-mate.com.au/#website",
+    		"description": "Control your home from anywhere for optimal convenience, security, and peace of mind. Contact House-Mate for the best home automation solutions.",
+    		"url": "https://house-mate.com.au/",
+    		"name": "House-Mate Automation",
+    		"inLanguage": "en-US",
+"sameAs":["https://www.twitter.com/HousemateAU/","https://www.instagram.com/housemateautomation/","https://www.facebook.com/HousemateAutomation/"],
+    		"potentialAction": {
+    			"@type": "SearchAction",
+    			"target": {
+    				"@type": "EntryPoint",
+    				"urlTemplate": "https://house-mate.com.au/search?q={search_term_string}"
+    			},
+    			"query-input": "required name=search_term_string"
+    		}
+    	}
+    }]
+</script>
+<script type="application/ld+json">
+[{
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Pool and Spa",
+        "item": "https://house-mate.com.au/pool.html"
+      },
+{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Lighting",
+        "item": "https://house-mate.com.au/lighting.html"
+      },
+{
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Security",
+        "item": "https://house-mate.com.au/security.html"
+      },
+{
+        "@type": "ListItem",
+        "position": 4,
+        "name": "Irrigation",
+        "item": "https://house-mate.com.au/irrigation.html"
+      },
+{
+        "@type": "ListItem",
+        "position": 5,
+        "name": "Blinds",
+        "item": "https://house-mate.com.au/blinds.html"
+      },
+{
+        "@type": "ListItem",
+        "position": 6,
+        "name": "Thermostat",
+        "item": "https://house-mate.com.au/thermostat.html"
+      }]
+}]
+</script>
+
 <body>
 
 <!-- Google Tag Manager (noscript) -->
