--- a/shop.html
+++ b/shop.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://house-mate.com.au/news.html" />
+<link rel="canonical" href="https://house-mate.com.au/shop.html" />
 <meta property="og:title" content="House-mate Smart Home Automation">
 <meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
-<meta property="og:url" content="https://house-mate.com.au/news.html" />
+<meta property="og:url" content="https://house-mate.com.au/shop.html" />
 
 <meta name="twitter:title" content="House-mate Smart Home Automation" />
 <meta name="twitter:site" content="@HousemateAU" />
