--- a/lighting.html
+++ b/lighting.html
@@ -156,7 +156,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "interactionStatistic": {
         "@type": "InteractionCounter",
         "interactionType": { "@type": "WatchAction" },
-        "userInteractionCount": 5647018
+        "userInteractionCount": 547018
       },
       "regionsAllowed": "AU,US,NL"
     }
