--- a/lighting.html
+++ b/lighting.html
@@ -97,6 +97,51 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     	}
     }]
 </script>
+
+
+<script type="application/ld+json">
+[{
+   		"@context": "https://schema.org",
+   		"@type": "FAQPage",
+   		"mainEntity": [{
+   			"@type": "Question",
+   			"name": "✅ What are the advantages of smart lighting?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Convenience and ease of remote use, smart scheduling, voice integration, smart sensors that will trigger lighting when movement is detected, or alternatively switch off lights after a period where no movement is detected.  These are just a few advantages of smart lighting."
+   			}
+   		},
+
+{
+   			"@type": "Question",
+   			"name": "✅ How do I issue a voice command for my sprinklers?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Depending on the voice assistant in use the commands vary.  Hey Siri, switch off the main room lights is the command for Apple, whereas Alexa, switch on the entrance lights is the command for Amazons voice assistant."
+   			}
+   		},
+
+
+{
+   			"@type": "Question",
+   			"name": "✅ Can I dim lights with Homekit?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Light circuits or bulbs can be dimmed from Homekit provided they have dimmable transformers or the bulbs themselves are dimmable.  Homekit cannot dim a light that is not designed to dim."
+   			}
+   		},
+ {
+   			"@type": "Question",
+   			"name": "✅ Is smart lighting worth it?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Smart lighting gives you access to your lighting wherever and whenever you need from your phone. It also allows the creation of scenes and automations involving lighting when combined with other accessories. For example, when the doorbell senses movement at night automatically turn on the entrance lights for a three minutes."
+   			}
+
+   		}]
+   	}
+   ]
+</script>
 <script type="application/ld+json">
 [{
       "@context": "https://schema.org",
