--- a/security.html
+++ b/security.html
@@ -146,7 +146,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {
       "@context": "https://schema.org",
       "@type": "VideoObject",
-      "name": "Lighting Automation | Smart Lighting",
+      "name": "Security Automation | Smart Security",
       "description": "Enhance security and convenience with alarm system automation. Remotely monitor, arm, and disarm your alarm system, receive alerts, and integrate it seamlessly into Apple Homekit or Google home ecosystem.",
       "thumbnailUrl": [
         "https://house-mate.com.au/assets/images/most-digital-camera-brands-are-compatible-220x220a.png"
@@ -161,7 +161,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "interactionType": { "@type": "WatchAction" },
         "userInteractionCount": 56
       },
-      "regionsAllowed": "AU,US,NL"
+      "regionsAllowed": "AU,US"
     }
    ]
 
