--- a/irrigation.html
+++ b/irrigation.html
@@ -142,7 +142,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@context": "https://schema.org",
       "@type": "VideoObject",
       "name": "Irrigation Automation | Smart Irrigation",
-      "description": "Experience the future of irrigation with our Smart Irrigation Installer service. Whether you are looking to reduce water usage and only water when necessary, we have the expertise and technology to make it happen.",
+      "description": "Experience the future of irrigation with Smart Irrigation. Reduce water usage and only water when necessary, we have the expertise and technology to make it happen.",
       "thumbnailUrl": [
         "https://house-mate.com.au/assets/images/automatic-rain-delay-220x220.jpg"
     ],
