--- a/testimonials.html
+++ b/testimonials.html
@@ -66,6 +66,32 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   
 </head>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "Service Business",
+        "image": "https://house-mate.com.au/assets/images/logo.jpg",
+        "name": "HouseMate Automations",
+        "telephone": "03 9000 3555"        }
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "4"
+      },
+      "name": "A very informative and knowledgable team.",
+      "author": {
+        "@type": "Person",
+        "name": "Adam S"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Google"
+      }
+    }
+    </script>
+
 <body>
 
 <!-- Google Tag Manager (noscript) -->
