--- a/testimonials.html
+++ b/testimonials.html
@@ -71,7 +71,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@context": "https://schema.org/",
       "@type": "Review",
       "itemReviewed": {
-        "@type": "Service Business",
+        "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/logo.jpg",
         "name": "HouseMate Automations",
         "telephone": "03 9000 3555"        }
