--- a/testimonials.html
+++ b/testimonials.html
@@ -78,9 +78,34 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       },
       "reviewRating": {
         "@type": "Rating",
-        "ratingValue": "4"
+        "ratingValue": "5"
       },
-      "name": "A very informative and knowledgable team.",
+      "name": "Andrew and his team brought our old CBUS installation into the modern world and also incorporated other devices that were already in the house.  We can now control CBUS via Apple HomeKit as well as our Acmeda blinds, projector and motorised screen.  The team also added additional wifi switches to light circuits that were not part of the CBUS installation.  We also needed to call on House-Mate for warranty of the CBUS interface and Andrew organised its replacement.  We are now considering expanding the solution to include the garage door and outside heating panels. Highly recommended!",
+      "author": {
+        "@type": "Person",
+        "name": "Vjera K"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Google"
+      }
+    }
+    </script>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "image": "https://house-mate.com.au/assets/images/logo.jpg",
+        "name": "HouseMate Automations",
+        "telephone": "03 9000 3555"        }
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      },
+      "name": "House-mate has given us control, flexibility and security for our home - it has given us peace of mind and great home enjoyment. Andrew and his team were utterly professional in advising us how to integrate House-mate into our home.  We had a lot of questions and they addressed them directly in a way we could understand.  The House-mate team walked us through the whole design and implementation process, and were proactive at every step. Highly recommended.",
       "author": {
         "@type": "Person",
         "name": "Adam S"
@@ -91,7 +116,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       }
     }
     </script>
-
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "image": "https://house-mate.com.au/assets/images/logo.jpg",
+        "name": "HouseMate Automations",
+        "telephone": "03 9000 3555"        }
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      },
+      "name": "The team at House-Mate Automation were very professional. They listened and understood what I was trying to achieve (which was a lighting, security, and AV solution), and utilised what I already have as part of the solution. Installers were punctual and polite. Great outcome!",
+      "author": {
+        "@type": "Person",
+        "name": "Steve B"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Google"
+      }
+    }
+    </script>
 <body>
 
 <!-- Google Tag Manager (noscript) -->
