--- a/testimonials.html
+++ b/testimonials.html
@@ -72,7 +72,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@type": "Review",
       "itemReviewed": {
         "@type": "LocalBusiness",
-        "image": "https://house-mate.com.au/assets/images/logo.jpg",
+        "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
         "telephone": "03 9000 3555"        }
       },
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@type": "Review",
       "itemReviewed": {
         "@type": "LocalBusiness",
-        "image": "https://house-mate.com.au/assets/images/logo.jpg",
+        "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
         "telephone": "03 9000 3555"        }
       },
@@ -122,7 +122,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@type": "Review",
       "itemReviewed": {
         "@type": "LocalBusiness",
-        "image": "https://house-mate.com.au/assets/images/logo.jpg",
+        "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
         "telephone": "03 9000 3555"        }
       },
