--- a/testimonials.html
+++ b/testimonials.html
@@ -141,7 +141,61 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       }
     }
     </script>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
+        "name": "HouseMate Automations",
+        "telephone": "03 9000 3555"        }
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      },
+      "name": "Such a great product and working really well for our family. We are in an older home and there were no problems installing the home automation. Andrew has been very helpful and responsive, both during the process and afterwards. Highly recommend.",
+      "author": {
+        "@type": "Person",
+        "name": "Brad D"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Google"
+      }
+    }
+    </script>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
+        "name": "HouseMate Automations",
+        "telephone": "03 9000 3555"        }
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      },
+      "name": "Life is Good! A huge thanks to Andrew and House-mate for seamlessly retrofitting my house for home automation.  The benefits are immense, I am saving costs on power as well as being environmentally friendly at the same time.  The convenience of being able to control blinds, heater and air conditioning and bed blankets upstairs is immeasurable.",
+      "author": {
+        "@type": "Person",
+        "name": "Justin Z"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Google"
+      }
+    }
+    </script>
+
+
+
 <body>
+
 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M9GNZRF"
