--- a/testimonials.html
+++ b/testimonials.html
@@ -192,7 +192,56 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     }
     </script>
 
-
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
+        "name": "HouseMate Automations",
+        "telephone": "03 9000 3555"        }
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      },
+      "name": "Very pleased. House-Mate have successfully connected my Legrand system into Homekit and I can now enjoy operating blinds,thermostats,lights and irrigation via the system.",
+      "author": {
+        "@type": "Person",
+        "name": "Phil B"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Google"
+      }
+    }
+    </script>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
+        "name": "HouseMate Automations",
+        "telephone": "03 9000 3555"        }
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      },
+      "name": "Absolute value for money. Everything just works and works well thru the app. Really simple to install and consultants are professional and know their stuff. Highly Recommended.",
+      "author": {
+        "@type": "Person",
+        "name": "Daniel S"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Google"
+      }
+    }
+    </script>
 
 <body>
 
