--- a/testimonials.html
+++ b/testimonials.html
@@ -74,7 +74,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        }
+        "telephone": "03 9000 3555"        
       },
       "reviewRating": {
         "@type": "Rating",
@@ -99,7 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        }
+        "telephone": "03 9000 3555"        
       },
       "reviewRating": {
         "@type": "Rating",
@@ -124,7 +124,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        }
+        "telephone": "03 9000 3555"        
       },
       "reviewRating": {
         "@type": "Rating",
@@ -149,7 +149,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        }
+        "telephone": "03 9000 3555"        
       },
       "reviewRating": {
         "@type": "Rating",
@@ -174,7 +174,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        }
+        "telephone": "03 9000 3555"        
       },
       "reviewRating": {
         "@type": "Rating",
@@ -200,7 +200,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        }
+        "telephone": "03 9000 3555"        
       },
       "reviewRating": {
         "@type": "Rating",
@@ -225,7 +225,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        }
+        "telephone": "03 9000 3555"        
       },
       "reviewRating": {
         "@type": "Rating",
