--- a/testimonials.html
+++ b/testimonials.html
@@ -74,7 +74,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        
+        "telephone": "03 9000 3555",
+"address" :{
+          "@type": "PostalAddress",
+          "streetAddress": "Level 1 257 Auburn Rd",
+          "addressLocality": "Hawthorn",
+          "addressRegion": "Victoria",
+          "postalCode": "3122",
+          "addressCountry": "AU"
+        }        
       },
       "reviewRating": {
         "@type": "Rating",
@@ -99,7 +107,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        
+        "telephone": "03 9000 3555",
+"address" :{
+          "@type": "PostalAddress",
+          "streetAddress": "Level 1 257 Auburn Rd",
+          "addressLocality": "Hawthorn",
+          "addressRegion": "Victoria",
+          "postalCode": "3122",
+          "addressCountry": "AU"
+        }                
       },
       "reviewRating": {
         "@type": "Rating",
@@ -124,7 +140,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        
+        "telephone": "03 9000 3555",
+"address" :{
+          "@type": "PostalAddress",
+          "streetAddress": "Level 1 257 Auburn Rd",
+          "addressLocality": "Hawthorn",
+          "addressRegion": "Victoria",
+          "postalCode": "3122",
+          "addressCountry": "AU"
+        }                
       },
       "reviewRating": {
         "@type": "Rating",
@@ -149,7 +173,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        
+        "telephone": "03 9000 3555",
+"address" :{
+          "@type": "PostalAddress",
+          "streetAddress": "Level 1 257 Auburn Rd",
+          "addressLocality": "Hawthorn",
+          "addressRegion": "Victoria",
+          "postalCode": "3122",
+          "addressCountry": "AU"
+        }               
       },
       "reviewRating": {
         "@type": "Rating",
@@ -174,7 +206,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        
+        "telephone": "03 9000 3555",
+"address" :{
+          "@type": "PostalAddress",
+          "streetAddress": "Level 1 257 Auburn Rd",
+          "addressLocality": "Hawthorn",
+          "addressRegion": "Victoria",
+          "postalCode": "3122",
+          "addressCountry": "AU"
+        }                
       },
       "reviewRating": {
         "@type": "Rating",
@@ -200,7 +240,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        
+        "telephone": "03 9000 3555",
+"address" :{
+          "@type": "PostalAddress",
+          "streetAddress": "Level 1 257 Auburn Rd",
+          "addressLocality": "Hawthorn",
+          "addressRegion": "Victoria",
+          "postalCode": "3122",
+          "addressCountry": "AU"
+        }                
       },
       "reviewRating": {
         "@type": "Rating",
@@ -225,7 +273,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "LocalBusiness",
         "image": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.jpg",
         "name": "HouseMate Automations",
-        "telephone": "03 9000 3555"        
+        "telephone": "03 9000 3555",
+"address" :{
+          "@type": "PostalAddress",
+          "streetAddress": "Level 1 257 Auburn Rd",
+          "addressLocality": "Hawthorn",
+          "addressRegion": "Victoria",
+          "postalCode": "3122",
+          "addressCountry": "AU"
+        }                
       },
       "reviewRating": {
         "@type": "Rating",
