--- a/remote5.html
+++ b/remote5.html
@@ -68,7 +68,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             background-color: rgb(255, 255, 255);
         }
         .layout{
-            width: 600px;
+            width: 400px;
             margin: auto;
         }
         .accordion{
@@ -86,12 +86,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         }
         .accordion__answer p{
             margin: 5px;
-            padding: 10px;
+            padding: 8px;
             font-size: small;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             color: rgb(0, 0, 0);
             background: rgb(255, 255, 255);
-            border-radius: 10px; 
+            border-radius: 8px; 
         }
         .accordion:hover{
             cursor: pointer;
@@ -514,7 +514,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>Are there mobile apps for controlling devices with a remote blaster?</p>
             </div>
             <div class="accordion__answer">
-                <p>Yes, some remote blasters come with companion mobile apps, enabling you to control your devices from your smartphone or tablet..</p>
+                <p>Yes, some remote blasters come with companion mobile apps, enabling you to control your devices from your smartphone or tablet. Housemate recommends Apple Home or Google Home.</p>
             </div>
             </div>
 
