--- a/remote5.html
+++ b/remote5.html
@@ -68,7 +68,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             background-color: rgb(255, 255, 255);
         }
         .layout{
-            width: 400px;
+            width: auto;
             margin: auto;
         }
         .accordion{
