--- a/remote.html
+++ b/remote.html
@@ -63,7 +63,46 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+   <style>
+        body{
+            background-color: rgb(255, 255, 255);
+        }
+        .layout{
+            width: auto;
+            margin: auto;
+        }
+        .accordion{
+            padding: 8px;
+            margin-top: 8px;
+            margin-bottom: 8px;
+            background: rgb(203, 195, 227);
+            border-radius: 8px;
+        }
+        .accordion__question p{
+            margin: 5px;
+            padding: 0;
+            font-family: Verdana;
+            font-size: 15px;
+        }
+        .accordion__answer p{
+            margin: 5px;
+            padding: 8px;
+            font-size: small;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color: rgb(0, 0, 0);
+            background: rgb(255, 255, 255);
+            border-radius: 8px; 
+        }
+        .accordion:hover{
+            cursor: pointer;
+        }
+        .accordion__answer {
+            display: none;
+        } 
+        .accordion.active .accordion__answer {
+            display: block;
+        }
+    </style>
   
 </head>
 
@@ -342,6 +381,158 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="sr-element sr-products" data-embed="multiple_products"><script type="application/json">{"publishable_key":"sr_live_pk_24d367a2e9657372819c1d7472beeb7e18dd","options":{"products_to_display":"categorized","categories":["av"],"product_size":"small","image_dimension_value":"crop","image_aspect_ratio":"portrait","button_style":"standard","variation_style":"on_hover","open_product_in":"popup","button_position":"inline","product_default_sorting_order":"product_order","product_pagination_limit":"12","hide_out_of_stock":"0"},"includes":{"show_search_box":"1","show_sort_by":"1","show_per_page":"1","show_category_dropdown":"1","show_currency_dropdown":"1","show_language_dropdown":"1","show_product_filters":"1","show_product_name":"1","show_product_price":"1","show_product_image":"1","show_product_summary":"1","open_modal_on_image_click":"1","show_view_product_button":"1","show_add_to_cart_button":"1","show_min_max_order_quantity":"1","show_sale":"1","show_free_shipping":"1","show_new_product":"1","show_digital_download":"1","show_pwyw":"1","image_swap":"1","show_button_icons":"1"},"product_popup":{"show_product_name":"1","show_product_price":"1","show_product_summary":"1","show_product_description":"1","show_product_image":"1","show_select_quantity":"1","show_image_thumbnails":"1","show_product_reviews":"1","show_product_sku":"1","show_product_categories":"1","show_social_sharing_icons":"1","show_related_products":"1","thumbnail_layout":"horizontal_below","image_dimension_value":"crop","image_aspect_ratio":"portrait","variation_styling":"dropdown","show_min_max_order_quantity":"1","show_sale":"1","show_free_shipping":"1","show_new_product":"1","show_digital_download":"1","show_pwyw":"1","show_product_tabs":"1","image_zoom":"1","lightbox_gallery":"1","show_stock":"0"},"styles":{"align_content":"center","product_title":"#314d5d","product_price":"#2d2d2d","product_summary":"#777777","button_background":"#233642","button_color":"#ffffff","view_product_button_background":"#233642","view_product_button_color":"#ffffff","view_cart_button_background":"#233642","view_cart_button_color":"#ffffff","product_background":"#ffffff","modal_background":"#ffffff","button_font_weight":"normal","popup":{"colors":{"product_title":"#333","product_price":"#666666","product_summary":"#666666","button_background":"#233642","button_color":"#ffffff","product_active_tab_background":"#f5f5f5"}}}}</script></div><script async src="https://cdn.shoprocket.io/loader.js"></script>
 
 
+<h4 style="color:black; text-align:center" class="">Remote Control Blaster FAQs</h4>
+<div class="layout">
+<div class="accordion">
+            <div class="accordion__question">
+                <p>What is a remote control blaster?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>A remote blaster is a device that wirelessly transmits signals to control electronic devices such as TVs, stereos, or other infrared-controlled appliances.</p>
+            </div>
+        </div>
+
+ <div class="accordion">
+            <div class="accordion__question">
+                <p>How does a remote control blaster work?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>A remote blaster typically uses infrared signals to mimic the signals sent by a remote control. It transmits these signals to the target device, allowing you to control it remotely.</p>
+            </div>
+            </div>
+
+ <div class="accordion">
+            <div class="accordion__question">
+                <p>Can I use a remote blaster with any remote-controlled device?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>In general, yes. As long as the device uses infrared signals for control, a remote blaster can emulate the remote control and operate it.</p>
+            </div>
+            </div>
+
+ <div class="accordion">
+            <div class="accordion__question">
+                <p>Are there compatibility issues with certain brands or models?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Compatibility depends on the specific remote blaster and the devices you want to control. Most blasters are designed to work with a wide range of devices, but it's essential to check for compatibility information.</p>
+            </div>
+            </div>
+
+ <div class="accordion">
+            <div class="accordion__question">
+                <p>How far can a remote blaster transmit signals?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>The transmission range varies, but most remote blasters can operate within a range of 10 to 30 feet, depending on the model and environmental conditions.</p>
+            </div>
+            </div>
+
+ <div class="accordion">
+            <div class="accordion__question">
+                <p>Do I need a line of sight for the remote blaster to work?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Yes, generally, a remote blaster requires a line of sight between the blaster and the device you want to control. Obstacles can interfere with signal transmission.</p>
+            </div>
+            </div>
+
+<div class="accordion">
+            <div class="accordion__question">
+                <p>Can I use a remote blaster with any smart home platform?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Many remote control blasters are compatible with smart home systems, allowing you to integrate them into your home automation setup for seamless control.  The products HouseMate Automations sell can be integrated into Apple Home or Google Home quite easily.</p>
+            </div>
+            </div>
+
+<div class="accordion">
+            <div class="accordion__question">
+                <p>How is a remote blaster powered?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Remote blasters are usually powered by batteries or can be connected to a power source. Battery life varies depending on usage. 5 volts USB power is best practise.</p>
+            </div>
+            </div>
+
+<div class="accordion">
+            <div class="accordion__question">
+                <p>Are there security concerns with using a remote blaster?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Security risks are minimal since remote blasters typically only transmit RF and infra-red signals to control devices. However, it's essential to follow best practices, such as securing your home network. Reach out to HouseMate if you need advice in securing your home network.</p>
+            </div>
+            </div>
+
+<div class="accordion">
+            <div class="accordion__question">
+                <p>Can I use a remote blaster with a universal remote control?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Yes, many remote blasters can be paired with universal remote controls, providing a centralized solution for managing multiple devices.</p>
+            </div>
+            </div>
+
+<div class="accordion">
+            <div class="accordion__question">
+                <p>Are there alternatives to infrared-based remote blasters?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Yes, some remote blasters use radio frequency (RF) signals instead of infrared, offering greater flexibility as they don't require a direct line of sight.</p>
+            </div>
+            </div>
+
+<div class="accordion">
+            <div class="accordion__question">
+                <p>Can a remote blaster learn new commands?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Yes, many remote blasters have a learning function, allowing them to mimic the signals of your existing remote controls for devices not initially supported.</p>
+            </div>
+            </div>
+
+<div class="accordion">
+            <div class="accordion__question">
+                <p>Is it difficult to set up a remote blaster?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>The setup process is usually straightforward, involving connecting the blaster to a power source and configuring it with your remote control codes.</p>
+            </div>
+            </div>
+
+<div class="accordion">
+            <div class="accordion__question">
+                <p>Can a remote blaster be used with gaming consoles?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Some remote blasters can be used with gaming consoles that use infrared signals for remote control, but compatibility may vary.</p>
+            </div>
+            </div>
+
+<div class="accordion">
+            <div class="accordion__question">
+                <p>Are there mobile apps for controlling devices with a remote blaster?</p>
+            </div>
+            <div class="accordion__answer">
+                <p>Yes, some remote blasters come with companion mobile apps, enabling you to control your devices from your smartphone or tablet. Housemate recommends Apple Home or Google Home.</p>
+            </div>
+            </div>
+
+    </div>
+
+    <script>
+        let answers=document.querySelectorAll(".accordion");
+        answers.forEach((event)=>{
+            event.addEventListener('click',()=>{
+                if(event.classList.contains("active")){
+                    event.classList.remove("active");
+                }
+                else{
+                    event.classList.add("active");
+                }
+            })
+        })
+    </script>
 
 <section once="footers" class="cid-sLFjqL2T71" id="footer7-6c">
 
