remote faqs added as acordian

--- a/remote.html
+++ b/remote.html
@@ -106,6 +106,47 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
 </head>
 
+<script type="application/ld+json">
+ [{
+   		"@context": "https://schema.org",
+   		"@type": "FAQPage",
+   		"mainEntity": [{
+   			"@type": "Question",
+   			"name": "✅ What is a remote control blaster?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "A remote blaster is a device that wirelessly transmits signals to control electronic devices such as TVs, stereos, or other infrared-controlled appliances."
+   			}
+   		},
+{
+   			"@type": "Question",
+   			"name": "✅ How does a remote control blaster work?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "A remote blaster typically uses infrared signals to mimic the signals sent by a remote control. It transmits these signals to the target device, allowing you to control it remotely."
+   			}
+   		},
+{
+   			"@type": "Question",
+   			"name": "✅ Can I use a remote blaster with any remote-controlled device?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "In general, yes. As long as the device uses infrared signals for control, a remote blaster can emulate the remote control and operate it."
+   			}
+   		},
+ {
+   			"@type": "Question",
+   			"name": "✅ Are there compatibility issues with remote control blasters?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Compatibility depends on the specific remote blaster and the devices you want to control. Most blasters are designed to work with a wide range of devices, but it's essential to check for compatibility information. Housemate ensures the remote control blasters we work with operate on both Apple and Google platforms."
+   			}
+   		}]
+   	}
+   ]
+
+</script>
+
 
 <script type="application/ld+json">
    [ {
